<resources>
    <string name="app_name">Quad Plot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_edit_plot">Add/Edit Plot</string>
    <string name="view_in_map">View in Map</string>
    <string name="start_mission">Start Mission</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="connect">Connect</string>
    <string name="delete">delete</string>
    <string name="gps_connecting">GPS: Connecting…</string>
    <string name="distance_unit">meter</string>
    <string name="distance_unit_multiple">meters</string>
    <string name="distance_unit_short">m</string>
    <string name="logo">logo</string>
    <string name="development_build">Development Build</string>
    <string name="_0">0</string>
    <string name="crop_height">Crop Height</string>

</resources>
